# mcp-servers

./: README.md
.github/workflows/: filesystem.yml  filesystem_workflow.yml  pg_workflow.yml
filesystem/: README.md  pyproject.toml
filesystem/filesystem/: __main__.py
filesystem/filesystem/schemas/: tool_schema.py
filesystem/filesystem/utils/: globals.py
filesystem/loadept_mcp_filesystem/tools/: tools.py
filesystem/loadept_mcp_filesystem/utils/: globals.py
pg/: go.mod
pg/cmd/db/: main.go
pg/cmd/mcp/: main.go
pg/internal/di/: container.go
pg/internal/domain/: transport.go
pg/internal/infra/persistence/: connection.go
pg/internal/repository/: query_repository.go  table_repository.go
pg/internal/service/: query_service.go  table_service.go
pg/internal/transport/: mcp_tool.go  transport.go
pg/internal/transport/tool/: execute_query.go  list_table.go  table_info.go  tool.go
