[project]
name = "filesystem"
version = "0.1.0"
description = "MCP Server for Filesystem Operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.13.0",
    "pydantic>=2.11.7",
]

[project.scripts]
filesystem = "filesystem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
