[project]
name = "loadept-mcp-filesystem"
version = "0.2.0"
description = "MCP Server for Filesystem Operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.13.0",
    "pydantic>=2.11.7",
]

[project.scripts]
loadept-mcp-filesystem = "loadept_mcp_filesystem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
